--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "jsdom": "^25.0.1",
+        "mongoose": "^8.8.1",
         "uuid": "^11.0.3"
     },
     "devDependencies": {
